--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.726.1",
+    "@aws-sdk/s3-request-presigner": "^3.726.1",
     "@prisma/client": "^6.16.3",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
