--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@aws-sdk/s3-request-presigner": "^3.726.1",
     "@prisma/client": "^6.16.3",
     "framer-motion": "^12.23.22",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.12",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
