--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "backfill:inmueble-slug": "node scripts/backfill-inmueble-slug.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
