--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "backfill:inmueble-slug": "node scripts/backfill-inmueble-slug.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
