--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "backfill:inmueble-slug": "node scripts/backfill-inmueble-slug.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^5.22.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
